--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A easy set-up for SSL certificate through a proxy on a specific port.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js &",
     "stop": "./stop.sh"
   },
