--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ssl-proxy",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "A easy set-up for SSL certificate through a proxy on a specific port.",
   "main": "index.js",
   "scripts": {
     "test": "node index.js && echo \"Server Started: exiting\" && exit 1"
     "start": "node index.js &",
-    "start-ca": "node index-ca.js &",
+    "start-self": "node index-self.js &",
     "stop": "./stop.sh"
   },
   "keywords": [
